package messages;

message User {
  required string first_name = 1;
  required string last_name = 2;
  optional int64 post_count = 3;

  repeated User friends = 4;
}
